# advent-of-code-2024

./: .gitignore  Cargo.toml  README.BASE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
rust/: Cargo.toml
rust/src/: defs.rs  example_solution.rs  main.rs
rust/src/solutions/: day_1.rs  day_6.rs  mod.rs
rust/src/utils/: utils.rs
scripts/: update-readme.ts
src/: definitions.ts  defs.rs  main.rs
src/solutions/: day_1.rs  day_11.rs  day_12.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs  template.rs
src/utils/: constants.rs  grid.rs  make_and_run.rs  math.rs  mod.rs  point.rs  strings.rs
src/years/: mod.rs
src/years/y2015/solutions/: day_1.rs  day_2.rs  day_3.rs  day_5.rs  mod.rs
src/years/y2024/solutions/: day_1.rs  day_10.rs  day_11.rs  day_13.rs  day_3.rs  day_9.rs  mod.rs  template.rs
src/years/y2025/solutions/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_9.rs  mod.rs
ts/: package.json  pnpm-lock.yaml
ts/src/: definitions.ts  index.ts
ts/src/solutions/: day-1.ts  day-2.ts  day-3.ts  day-4.ts  day-5.ts  day-7.ts  day-8.ts  day-9.ts
ts/src/utils/: minBy.ts  utils.ts
