[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
itertools = "0.13.0"
paste = "1.0.15"
regex = "1.10.2"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["full"] }
